# zinc

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
Example/: .gitignore  data-file-schema.xml  pwscf.in  pwscf.out  yvo4.cif  yvo4.vasp  yvo4.xyz
include/zinc/core/: constants.h  lattice.h  structure.h
include/zinc/io/: cif.h  driver.h  poscar.h  qe_input.h  qe_log.h  qe_xml.h  xyz.h
scripts/: fetch_deps.sh
src/cli/: main.cpp
src/cli/commands/: convert.cpp  info.cpp  scan.cpp  update.cpp
src/core/: constants.cpp  lattice.cpp  structure.cpp
src/io/: cif.cpp  driver.cpp  poscar.cpp  qe_input.cpp  qe_log.cpp  qe_xml.cpp  xyz.cpp
tests/: test_cli.cpp  test_core.cpp  test_io.cpp
